// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Complex validator should validate 1`] = `null`;

exports[`alternative() should support custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Custom message",
      "path": Array [],
      "value": 1,
    },
  ],
  "rootValue": 1,
}
`;

exports[`createValidator() should return what validate function returns 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Test",
      "path": Array [],
      "value": 1,
    },
  ],
  "rootValue": 1,
}
`;

exports[`pipe() should return the first met error in pipe chain of validators 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Test",
      "path": Array [],
      "value": 1,
    },
  ],
  "rootValue": 1,
}
`;

exports[`pipe() should support custom message 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "Custom message",
      "path": Array [],
      "value": 1,
    },
  ],
  "rootValue": 1,
}
`;
